--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,58 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>webpack starterkit</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.3/handlebars.min.js"></script>
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=06915836-32e1-4c67-9c3e-e004f753fb2b&lang=ru_RU" type="text/javascript"></script>
+  <style>
+    html, body, #map {
+      width: 100%; height: 100%; padding: 0; margin: 0;
+    }
+  </style>
 </head>
 <body>
-  <h1>webpack starter</h1>
-  <p>✨ A lightweight foundation for your next webpack based frontend project.</p>
+  <div id="homework-container">
+    <div id="review-container"></div>
+    <div id="map"></div>
+    <button id="clearLocalStorage" class="clear-btn btn--orange">Очистить Local Storage</button>
+  </div>
+  <script type="text/x-handlebars-template" id="formTemplate">
+    <div class="review__block">
+      <div class="review__header">
+          <div class="review__address">
+              <div class="review__icon"></div>
+              <div class="review__address-text">{{address}}</div>
+          </div>
+          <button id="closeReview" class="review__close-btn close-btn"> X
+          </button>
+      </div>
+
+      <div class="review__content">
+
+      </div>
+  
+      <div class="review__form-container">
+          <div class="review__form-header">Ваш отзыв</div>
+          <form action="" class="review__form form">
+              <input type="text" class="form__user input" placeholder="Ваше имя" name="userName">
+              <input type="text" class="form__place input" placeholder="Укажите место" name="place">
+              <textarea class="form__review-text input" name="reviewText" id="" cols="30" rows="5" placeholder="Поделитесь впечатлениями"></textarea>
+              <button id="addReview" class="form__add-btn btn--orange">Добавить</button>
+          </form>
+      </div>
+    </div>
+  </script>
+  <script type="text/x-handlebars-template" id="reviewTemplate">
+    {{#each reviewList}}
+      <li class="reviews__item old-review">
+        <div class="">asd</div>
+        <div class="old-review__info">
+            <span class="old-review__user">{{userName}}</span>
+            <span class="old-review__place">{{place}}</span>
+            <span class="old-review__date">{{date}}</span>
+        </div>
+        <div class="old-review__text">{{reviewText}}</div>
+      </li>
+    {{/each}}
+  </script>
 </body>
 </html>
